# Synth

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTES.md  README.md  build.sh  conanfile.txt
etc/: recipes.json
plugin/BasicPlugin/: CMakeLists.txt  README.md  build.sh  config.json
plugin/BasicPlugin/include/: AudioFormat.h  AudioQueue.h  LockingRingBuffer.h  Node.h  RingBuffer.h
plugin/BasicPlugin/src/: BasicPluginControl.cpp  BasicPluginControl.h  BasicPluginNode.cpp  BasicPluginNode.h  CMakeLists.txt
src/: AttributeInfo.h  AudioBuffer.h  AudioDevice.cpp  AudioDevice.h  AudioFormat.h  AudioParameter.h  AudioQueue.h  CMakeLists.txt  EffectController.h  GUI.cpp  GUI.h  LockingRingBuffer.h  PipelineController.cpp  PipelineController.h  RingBuffer.h  effects.h  fft.cpp  fft.h  main.cpp  sample_type.h  wav.cpp  wav.h
src/common/: AttributeInfo.cpp  AttributeInfo.h  AudioDevice.cpp  AudioDevice.h  AudioParameter.cpp  AudioParameter.h  AudioQueue.h  DisplayContext.h  GUI.cpp  GUI.h  LockingRingBuffer.h  PipelineController.cpp  PipelineController.h  Recipe.h  RingBuffer.h
src/effects/: Effect.h  Volume.cpp  Volume.h
src/pipeline/: EffectNode.h  FileSinkNode.cpp  FileSinkNode.h  FileSourceNode.cpp  FileSourceNode.h  InputNode.h  MixerNode.cpp  MixerNode.h  Node.cpp  Node.h  NodeFactory.cpp  NodeFactory.h  OutputNode.h  PAInputNode.h  PAOutputNode.h  PASinkNode.cpp  PASinkNode.h  PASourceNode.cpp  PASourceNode.h  PassthroughNode.cpp  PassthroughNode.h  Pipeline.cpp  Pipeline.h  SineSourceNode.cpp  SineSourceNode.h  SquareSourceNode.cpp  SquareSourceNode.h  TremoloNode.cpp  TremoloNode.h  VolumeNode.cpp  VolumeNode.h
src/pipeline/plugins/: BiquadNode.cpp  BiquadNode.h  BitCrushNode.cpp  BitCrushNode.h  CMakeLists.txt  FileSinkNode.cpp  FileSinkNode.h  FileSourceNode.cpp  FileSourceNode.h  MixerNode.cpp  MixerNode.h  PassthroughNode.cpp  PassthroughNode.h  SineSourceNode.cpp  SineSourceNode.h  SplitterNode.cpp  SplitterNode.h  SquareSourceNode.cpp  SquareSourceNode.h  TremoloNode.cpp  TremoloNode.h  VibratoNode.cpp  VibratoNode.h  VolumeNode.cpp  VolumeNode.h
src/ui/: ControlWidget.h  ControlWidgetFactory.cpp  NodeEditorWidget.cpp  NodeEditorWidget.h  NodeWidget.h  NodeWidgetFactory.cpp  NodeWidgetFactory.h  SinkNodeWidget.cpp  SinkNodeWidget.h  SourceNodeWidget.cpp  SourceNodeWidget.h  VolumeNodeWidget.cpp  VolumeNodeWidget.h  VolumeWidget.cpp  VolumeWidget.h
src/ui/control/: BiquadWidget.cpp  BiquadWidget.h  ControlWidget.h  ControlWidgetFactory.cpp  ControlWidgetFactory.h  SineControlWidget.cpp  SineControlWidget.h  TremoloWidget.cpp  TremoloWidget.h  VibratoWidget.cpp  VibratoWidget.h  VolumeWidget.cpp  VolumeWidget.h
src/ui/control/plugins/: BiquadWidget.cpp  BiquadWidget.h  CMakeLists.txt  FileSourceWidget.cpp  FileSourceWidget.h  SineControlWidget.cpp  SineControlWidget.h  TremoloWidget.cpp  TremoloWidget.h  VibratoWidget.cpp  VibratoWidget.h  VolumeWidget.cpp  VolumeWidget.h
src/ui/nodes/: MixerNodeWidget.cpp  MixerNodeWidget.h  NodeEditorWidget.cpp  NodeEditorWidget.h  NodeWidget.cpp  NodeWidget.h  NodeWidgetFactory.cpp  NodeWidgetFactory.h  PassthroughNodeWidget.cpp  PassthroughNodeWidget.h  SourceNodeWidget.cpp  TremoloNodeWidget.cpp  TremoloNodeWidget.h  VolumeNodeWidget.cpp  VolumeNodeWidget.h
